# wiz_rag

./: .dockerignore  .gitignore  Makefile  config.toml  main.py  pyproject.toml
tests/: test_milvus.py  test_movie_recommend.py  test_sub_query_with_langchain.py  test_text_image_search.py  test_unstructured.py  test_vanilla_rag_with_langchain.py
wiz_rag/: __init__.py
wiz_rag/clip_utils/: clip.py
wiz_rag/config/: __init__.py  log_config.py  toml_config.py
wiz_rag/db/: chroma_db.py
wiz_rag/embeddings/: __init__.py  distance.py  embedding_client.py  embedding_function.py
wiz_rag/llm/: __init__.py  client.py
wiz_rag/rag_utils/: milvus.py  sub_query.py  vanilla.py
wiz_rag/utils/: logger.py
