[project]
name = "wiz_rag"
version = "0.1.0"
description = "RAG 知识库"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chroma>=0.2.0",
    "chromadb>=1.0.12",
    "datasets>=3.6.0",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.9",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-deepseek>=0.1.3",
    "langchain-huggingface>=0.3.0",
    "langchain-milvus>=0.2.0",
    "langgraph>=0.4.8",
    "numpy>=2.3.0",
    "pillow>=11.2.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
    "pymilvus>=2.5.11",
    "pypdf>=5.6.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=4.1.0",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "black>=23.9.1",
    "isort>=5.12.0",
    "mypy>=1.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
